Implementada la funcion de generar contraseñas

--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
             <input type="checkbox" id="simbolos"> Incluir símbolos
         </label>            
     </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
