Implementada funcionalidad copiar contrasena

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
                 <input type="checkbox" id="simbolos"> Incluir símbolos
             </label>
         </div>
-        
-        <button id="generar">Generar contraseña</button>
+        <div id="botones">
+            <button id="generar">Generar contraseña</button>
+            <button id="copiar"><img src="img/copiar.png" alt="Copiar"></button>
+        </div>
     </div>
     <script src="js/script.js"></script>
 </body>
